fixed + button as icon was off-center and removed redundant code from delete task

--- a/style.css
+++ b/style.css
@@ -77,7 +77,6 @@ form button i {
 .add i{
   position: relative;
   color: white;
-  left: 25%;
 }
 
 .add:hover {
